# predictive_control

./: .gitignore  CMakeLists.txt  README.md  lmpcc.rosinstall  lmpcc_performance.txt  package.xml  predictive_control.rosinstall  setup.py  trajectory_exporter.sh
FORCESNLPsolver/: FORCESNLPsolver.m  FORCESNLPsolver_casadi2forces.c  FORCESNLPsolver_model_1.c  FORCESNLPsolver_model_20.c
FORCESNLPsolver/include/: FORCESNLPsolver.h
FORCESNLPsolver/interface/: FORCESNLPsolver_lib.mdl  FORCESNLPsolver_mex.c  FORCESNLPsolver_py.py  FORCESNLPsolver_simulinkBlock.c  FORCESNLPsolver_simulinkBlockcompact.c  FORCESNLPsolvercompact_lib.mdl
action/: move.action
cfg/: PredictiveController.cfg
config/: arm_left_predictive_controller.yaml  arm_predictive_config_parameter.yaml  blah.yaml  predicitve_config.yaml  predictive_config_parameter.yaml  predictive_config_parameter_simulation.yaml  road.yaml
images/: scenario1.eps  scenario2.eps
include/lmpcc/: lmpcc_configuration.h  lmpcc_controller.h  mpcc_controller.h  predictive_configuration.h  predictive_controller.h
include/lmpcc/generated_mpc/: acado_common.h  acado_qpoases_interface.hpp
include/predictive_control/: Clothoid.h  collision_avoidance.h  collision_detection.h  kinematic_calculations.h  mpcc.h  mpcc_controller.h  predictive_configuration.h  predictive_controller.h  predictive_trajectory_generator.h
include/predictive_control/generated_mpc/: acado_common.h  acado_qpoases3_interface.h  acado_qpoases_interface.hpp
launch/: arm_left_cartesian_conrtoller.launch  arm_left_frame_tracker.launch  arm_left_predictive_controller.launch  cartesian_controller.launch  debug_nodes.launch  example_sim.launch  frame_tracker.launch  frame_tracker_node_sim.launch  full_simulation.launch  interaction_test.launch  lmpcc.launch  lmpcc_simulation.launch  lmpcc_social_vdgnn.launch  mpc_experiment_cob.launch  pd_sim.launch  predictive_controller.launch  prius_lmpcc.launch  robot_bringup.launch  rqt_plot.launch  sim.launch  static_frame.launch  test.launch
lmpcc_forces_matlab_code/: FORCESNLPsolver.m  FORCESNLPsolver.mexa64  FORCESNLPsolver_casadi2forces.c  FORCESNLPsolver_mex_compiler_warnings.txt  FORCESNLPsolver_model_1.c  FORCESNLPsolver_model_12.c  FORCESNLPsolver_model_15.c  FORCESNLPsolver_py.py  bivariate_gaussian  bivariate_gaussian.m  dynamic_scenario.m  inequality_constr_scenario.m  objective_scenario.m  scenario.m
lmpcc_forces_matlab_code/@FORCESproWS/: generateCodeFromMatlab.m
lmpcc_forces_matlab_code/FORCESNLPsolver/: FORCESNLPsolver.m
lmpcc_forces_matlab_code/FORCESNLPsolver/include/: FORCESNLPsolver.h
lmpcc_forces_matlab_code/FORCESNLPsolver/interface/: COPYING.m  FORCESNLPsolver.m  FORCESNLPsolver_build.py  FORCESNLPsolver_lib.mdl  FORCESNLPsolver_mex.c  FORCESNLPsolver_py.py  FORCESNLPsolver_simulinkBlock.c  FORCESNLPsolver_simulinkBlockcompact.c  FORCESNLPsolvercompact_lib.mdl
lmpcc_forces_matlab_code/post-processing/: RESULTS.ods  people_avoidance.m  process_performance_results.m  read_people_avoidance.m
matlab/: FORCESNLPsolver_casadi2forces.c  FORCESNLPsolver_model_1.c  FORCESNLPsolver_model_50.c  NLP_simpleCar.m  relative_motion.m  relative_motion2.m
msg/: CollisionObject.msg  control_feedback.msg
output_data/: error-pose_0_07-02-2018-12:12:45.csv  error-pose_0_07-02-2018-18:24:53.csv  error-pose_0_10-02-2018-15:28:32.csv  error-pose_1_07-02-2018-12:13:03.csv  error-pose_1_07-02-2018-18:25:56.csv  error-pose_1_10-02-2018-11:04:15.csv  error-pose_1_10-02-2018-11:14:40.csv  error-pose_2_14-02-2018-13:42:36.csv  error-pose_3_14-02-2018-13:48:32.csv  error-pose_3_14-02-2018-13:58:49.csv  error-pose_7_11-02-2018-13:47:40.csv  error-pose_7_11-02-2018-13:47:41.csv  error-pose_7_11-02-2018-13:47:42.csv  pose-1_07-02-2018-11:39:45.csv  pose-1_07-02-2018-12:13:04.csv  pose-1_10-02-2018-11:04:15.csv  pose-2_14-02-2018-13:42:36.csv  pose-3_14-02-2018-13:48:32.csv  pose-3_14-02-2018-13:58:49.csv  pose_1_06-02-2018-19:32:05.csv
planning_queries/: test_object_database.yaml
planning_scene/: bookshelves.scene  box.scene  diningtable.scene  kitchen.scene  table.scene
plots/: cartesian_error.eps  figure_1.eps  rqt_plot.txt
rviz_config/: arm_left_desciption.rviz  rviz_config.rviz  test_description.rviz
script/: check_add_static_object_service.py  table_generation.py  test_add_obstacles.py  test_interactive_obstacle_node.py  test_interative_obstacle_node.py  test_move_action_client.py  trajectory_exporter.py  visualize_cartesian_error_trajectory.py  visualize_trajectory.py
scripts/: simulation_manager_node.py
src/: Clothoid.cpp  carla_interface.cpp  collision_avoidance.cpp  collision_detection.cpp  generate_mpc.cpp  interactive_obstacle_node.py  kinematic_calculations.cpp  lmpcc_configuration.cpp  lmpcc_controller.cpp  lmpcc_node.cpp  mpcc_controller.cpp  predicitve_controller.cpp  predictive_configuration.cpp  predictive_control_node.cpp  predictive_controller.cpp  predictive_trajectory_generator.cpp
src/generated_mpc/: Makefile  acado_hessian_regularization.c  acado_integrator.c  acado_qpoases3_interface.c  acado_qpoases3_interface.h  acado_qpoases_interface.cpp  acado_solver.c
src/ocp/: acado_common.h  acado_hessian_regularization.c  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
srv/: LMPCCPlan.srv  LMPCCReset.srv  StaticCollisionObject.srv  StaticObstacle.srv
test/: collision_detection_test.cpp  kinematic_calculations_test.cpp  new_kinematic_calculation_test.cpp  predictive_config_test.cpp  predictive_configuration_parameter_test.cpp  predictive_controller_test.cpp
test_overleaf_git-bridge/: main.aux  main.out  main.tex  title_page.dvi  title_page.tex
